# monoid

./: CODE_OF_CONDUCT.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
monoid-backend/: .env.example  .envrc  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tasks.py
monoid-backend/monoid_backend/: config.py  main.py
monoid-backend/monoid_backend/api/: __init__.py
monoid-backend/monoid_backend/api/dummy/: __init__.py  dummy.py
monoid-backend/monoid_backend/api/helpers/: __init__.py  current_account.py  encode_decode.py
monoid-backend/monoid_backend/api/v1/: __init__.py  account.py  action.py  agent.py  agent_schedule.py  api_action.py  auth.py  chat_session.py  configured_action.py
monoid-backend/monoid_backend/core/: aws_keyspaces.py  cassandra.py  database.py
monoid-backend/monoid_backend/crud/: account_crud.py  action_crud.py  agent_crud.py  agent_schedule_crud.py  api_action_crud.py  auth_crud.py  chat_session_crud.py  configured_action_crud.py
monoid-backend/monoid_backend/crud/helpers/: scheduler.py
monoid-backend/monoid_backend/db_models/: account.py  action.py  agent.py  api_action.py  auth.py  base.py  base_class.py  chat_session.py
monoid-backend/monoid_backend/monoid/: llm_utils.py
monoid-backend/monoid_backend/monoid/action/: action_config_model.py  api_action_config.py  expert_action_config.py  utils.py
monoid-backend/pg_migrations/: env.py
monoid-backend/pg_migrations/versions/: 2023_11_26_17_d51ad6c92c11_init_full_migration.py
monoid-backend/scripts/cassandra/: 0_create_chat_session_models.py
(+191 files in other folders)
