[tool.poetry]
name = "monoid-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "monoid_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.100.0"
uvicorn = "^0.22.0"
poetry-dotenv-plugin = "^0.1.0"
greenlet = "^2.0.2"
sqlalchemy = "^2.0.15"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
mypy = "^1.3.0"
alembic = "^1.11.1"
google-auth-oauthlib = "^1.0.0"
python-dateutil = "^2.8.2"
openai = "^0.27.8"
pyjwt = "^2.7.0"
boto3 = "^1.27.0"
mangum = "^0.17.0"
pydantic = {extras = ["email"], version = "^2.0.2"}
pydantic-settings = "^2.0.1"
invoke = "^2.1.3"
cassandra-sigv4 = "^4.0.2"
google-auth = "^2.22.0"
requests = "^2.31.0"
sentry-sdk = "^1.32.0"
asyncpg = "^0.28.0"
urllib3 = ">=1.25.4,<1.27"
tiktoken = "^0.5.1"
alembic-postgresql-enum = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
